# CosmicMicrowaveBackground

./: .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
.github/workflows/: lint-on-push.yml  test-on-push.yml
src/: main.py
src/data/: __init__.py  analyze.py  input.py  process.py
src/folder/: test.py
src/util/: __init__.py  cli.py  map.py
tests/: sample_test.py
