[tool.poetry]
name = "cmb-percolation"
version = "0.1.0"
description = ""
authors = ["Andrew Li <andrewli@u.northwestern.edu>", "Jay Zou <zou.jay@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
healpy = "^1.17.1"
astropy = "^6.1.1"
scipy = "^1.13.1"
tqdm = "^4.66.4"
numpy = "1.26.4"
polars = "^0.20.31"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"
black = "^24.4.2"
pytest = "^8.2.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
